--- a/translation/dest/en-US/mobile-misc.yaml
+++ b/translation/dest/en-US/mobile-misc.yaml
@@ -8,3 +8,6 @@ en-US:
   offline: "Offline"
   otbUseSymmetricPieces: "Use symmetric pieces" # Setting for offline over-the-board games
   otbFlipPiecesAndInfoAfterMove: "Flip pieces and opponent info after move" # Setting for offline over-the-board games
+  settingsClockPosition: "Clock position" # Determines whether each player's time is shown on the left or right side of the board
+  positionRight: "Right" # As in "right-hand side"; not truth, morality, or law
+  positionLeft: "Left" # As in "left-hand side"; not political or past participle
