--- a/translation/source/mobile-misc.yaml
+++ b/translation/source/mobile-misc.yaml
@@ -6,3 +6,4 @@ en:
   notesSynchronizationHasFailed: "Notes synchronization with lichess has failed, please try later."
   vibrateOnGameEvents: "Vibrate on game events"
   offline: "Offline"
+  landscapeBoardSide: "Board screen side (in landscape mode)" # Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
