--- a/translation/dest/en-US/mobile-misc.yaml
+++ b/translation/dest/en-US/mobile-misc.yaml
@@ -11,3 +11,4 @@ en-US:
   settingsClockPosition: "Clock position" # Determines whether each player's time is shown on the left or right side of the board
   positionRight: "Right" # As in "right-hand side"; not truth, morality, or law
   positionLeft: "Left" # As in "left-hand side"; not political or past participle
+  landscapeBoardSide: "Board screen side (in landscape mode)" # Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
