--- a/translation/source/mobile-misc.yaml
+++ b/translation/source/mobile-misc.yaml
@@ -14,9 +14,7 @@ en-US:
   landscapeBoardSide: "Board screen side (in landscape mode)" # Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
   toggleSound: "Toggle sound"
   noFriendsOnline: "No friends online"
-  unauthorizedError: "Access is unauthorised."
-  playOfflineComputer: "Computer"
-  playOnTheBoardOffline: "Over the board"
-  sharePGN: "Share PGN"
+  overTheBoard: "Over the board"
+  sharePgn: "Share PGN"
   playOnline: "Play online"
   playOffline: "Play offline"
