More trans fixes

--- a/translation/source/mobile-misc.yaml
+++ b/translation/source/mobile-misc.yaml
@@ -16,5 +16,6 @@ en-US:
   noFriendsOnline: "No friends online"
   overTheBoard: "Over the board"
   sharePgn: "Share PGN"
+  shareGameUrl: 'Share game URL'
   playOnline: "Play online"
   playOffline: "Play offline"
