New Crowdin updates (#1889)
* New translations: mobile-misc.yaml (Romanian)

* New translations: mobile-misc.yaml (Portuguese)

* New translations: mobile-misc.yaml (Odia)

* New translations: mobile-misc.yaml (Luxembourgish)

* New translations: mobile-misc.yaml (Norwegian Nynorsk)

* New translations: mobile-misc.yaml (Portuguese, Brazilian)

* New translations: mobile-misc.yaml (Galician)

* New translations: mobile-misc.yaml (Turkish)

* New translations: mobile-misc.yaml (Russian)

* New translations: mobile-misc.yaml (Polish)

* New translations: mobile-misc.yaml (French)

* New translations: mobile-misc.yaml (Dutch)

* New translations: mobile-misc.yaml (Lithuanian)

* New translations: mobile-misc.yaml (Japanese)

* New translations: mobile-misc.yaml (Irish)

* New translations: mobile-misc.yaml (Finnish)

* New translations: mobile-misc.yaml (Greek)

* New translations: mobile-misc.yaml (German)

* New translations: mobile-misc.yaml (Spanish)

* New translations: mobile-misc.yaml (Norwegian Bokmal)

--- a/translation/dest/el-GR/mobile-misc.yaml
+++ b/translation/dest/el-GR/mobile-misc.yaml
@@ -12,3 +12,9 @@ el-GR:
   positionRight: "Δεξιά" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Αριστερά" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Θέση σκακιέρας στην οθόνη (στον οριζόντιο προσανατολισμό)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Ενεργ./Απενεργ. ήχου" #Settings to enable/disable sound
+  overTheBoard: "Παιχνίδι χωρίς σύνδεση"
+  sharePgn: "Κοινοποίηση PGN"
+  shareGameUrl: 'Κοινοποίηση URL παιχνιδιού'
+  playOnline: "Παίξτε σε διαδικτυακά"
+  playOffline: "Παίξτε χωρίς σύνδεση"
