--- a/translation/dest/nn-NO/mobile-misc.yaml
+++ b/translation/dest/nn-NO/mobile-misc.yaml
@@ -12,3 +12,9 @@ nn-NO:
   positionRight: "Høgre" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Venstre" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Skjermsida av brettet (i landskapsformat)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Lyd av/på" #Settings to enable/disable sound
+  overTheBoard: "Spel fråkopla, bruk som brett"
+  sharePgn: "Del PGN"
+  shareGameUrl: 'Del spel-URL'
+  playOnline: "Spel på nett"
+  playOffline: "Spel fråkopla"
