--- a/translation/dest/pt-BR/mobile-misc.yaml
+++ b/translation/dest/pt-BR/mobile-misc.yaml
@@ -13,3 +13,8 @@ pt-BR:
   positionLeft: "Esquerda" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Lado da tela do tabuleiro (no modo paisagem)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
   toggleSound: "Ativar som" #Settings to enable/disable sound
+  overTheBoard: "Xadrez OTB"
+  sharePgn: "Compartilhar PGN"
+  shareGameUrl: 'Compartilhar URL do jogo'
+  playOnline: "Jogar online"
+  playOffline: "Jogar offline"
