--- a/translation/dest/de-DE/mobile-misc.yaml
+++ b/translation/dest/de-DE/mobile-misc.yaml
@@ -12,3 +12,9 @@ de-DE:
   positionRight: "Rechts" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Links" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Bildschirmseite des Bretts (im Querformat)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Ton ein-/ausschalten" #Settings to enable/disable sound
+  overTheBoard: "Offline gegen Mensch"
+  sharePgn: "PGN teilen"
+  shareGameUrl: 'Link zur Partie teilen'
+  playOnline: "Spiele online"
+  playOffline: "Spiele offline"
