--- a/translation/dest/fi-FI/mobile-misc.yaml
+++ b/translation/dest/fi-FI/mobile-misc.yaml
@@ -12,3 +12,9 @@ fi-FI:
   positionRight: "Oikealla" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Vasemmalla" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Laudan sijainti näytöllä (vaakatilassa)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Ääni päälle / pois" #Settings to enable/disable sound
+  overTheBoard: "Kaveria vastaan offline-tilassa"
+  sharePgn: "Jaa PGN"
+  shareGameUrl: 'Jaa pelin URL'
+  playOnline: "Pelaa verkossa"
+  playOffline: "Pelaa offline-tilassa"
