--- a/translation/dest/fr-FR/mobile-misc.yaml
+++ b/translation/dest/fr-FR/mobile-misc.yaml
@@ -12,3 +12,9 @@ fr-FR:
   positionRight: "Côté droit" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Côté gauche" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Placement de l'échiquier (mode paysage)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Activer/désactiver le son" #Settings to enable/disable sound
+  overTheBoard: "Jouer hors ligne avec un ami"
+  sharePgn: "Partager le fichier PGN"
+  shareGameUrl: 'Partager l''URL de la partie'
+  playOnline: "Jouer en ligne"
+  playOffline: "Jouer hors ligne"
