--- a/translation/dest/gl-ES/mobile-misc.yaml
+++ b/translation/dest/gl-ES/mobile-misc.yaml
@@ -12,3 +12,9 @@ gl-ES:
   positionRight: "Dereita" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Esquerda" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Ubicación do taboleiro (en modo horizontal)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "(Des)activar son" #Settings to enable/disable sound
+  overTheBoard: "No taboleiro"
+  sharePgn: "Compartir PGN"
+  shareGameUrl: 'Compartir URL da partida'
+  playOnline: "Xogar en liña"
+  playOffline: "Xogar offline"
