--- a/translation/dest/lt-LT/mobile-misc.yaml
+++ b/translation/dest/lt-LT/mobile-misc.yaml
@@ -12,3 +12,9 @@ lt-LT:
   positionRight: "Dešinė" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Kairė" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Lentos ekrano pusė (horizontaliame režime)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Įjungti garsą" #Settings to enable/disable sound
+  overTheBoard: "Žaidimas lentoje"
+  sharePgn: "Pasidalinti PGN"
+  shareGameUrl: 'Pasidalinti žaidimo adresu'
+  playOnline: "Žaisti tinkle"
+  playOffline: "Žaisti atsijungus"
