--- a/translation/dest/ro-RO/mobile-misc.yaml
+++ b/translation/dest/ro-RO/mobile-misc.yaml
@@ -12,3 +12,9 @@ ro-RO:
   positionRight: "Dreapta" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Stânga" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Plasarea tablei de joc (in mod peisaj)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Comutare sunet" #Settings to enable/disable sound
+  overTheBoard: "Deasupra tablei"
+  sharePgn: "Distribuie PGN"
+  shareGameUrl: 'Distribuie URL-ul jocului'
+  playOnline: "Joacă online"
+  playOffline: "Joacă offline"
