--- a/translation/dest/tr-TR/mobile-misc.yaml
+++ b/translation/dest/tr-TR/mobile-misc.yaml
@@ -12,3 +12,8 @@ tr-TR:
   positionRight: "Sağ" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Sol" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Tahta ekran tarafı (yatay modda)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Sesi aç/kapat" #Settings to enable/disable sound
+  sharePgn: "PGN 'yi paylaş"
+  shareGameUrl: 'Oyun bağlantısını paylaş'
+  playOnline: "Çevrimiçi oyna"
+  playOffline: "Çevrimdışı oyna"
