New Crowdin updates (#1890)
* New translations: mobile-misc.yaml (Czech)

* New translations: mobile-misc.yaml (Basque)

* New translations: mobile-misc.yaml (Dutch)

* New translations: mobile-misc.yaml (Chinese Simplified)

* New translations: mobile-misc.yaml (Kazakh)

* New translations: mobile-misc.yaml (Welsh)

* New translations: mobile-misc.yaml (Belarusian)

* New translations: mobile-misc.yaml (Catalan)

* New translations: mobile-misc.yaml (Croatian)

* New translations: mobile-misc.yaml (Spanish)

* New translations: mobile-misc.yaml (Swedish)

* New translations: mobile-misc.yaml (Ukrainian)

* New translations: mobile-misc.yaml (Latvian)

--- a/translation/dest/cy-GB/mobile-misc.yaml
+++ b/translation/dest/cy-GB/mobile-misc.yaml
@@ -2,3 +2,9 @@ cy-GB:
   playerisInvitingYou: "Mae %s yn eich gwahodd chi"
   positionRight: "Dde" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Chwith" #As in "left-hand side"; not political or past participle
+  toggleSound: "Toglo sain" #Settings to enable/disable sound
+  overTheBoard: "Dros y bwrdd"
+  sharePgn: "Rhannu PGN"
+  shareGameUrl: 'Rhannu URL gêm'
+  playOnline: "Chwarae ar-lein"
+  playOffline: "Chwarae all-lein"
