--- a/translation/dest/hr-HR/mobile-misc.yaml
+++ b/translation/dest/hr-HR/mobile-misc.yaml
@@ -1,1 +1,7 @@
 hr-HR:
+  toggleSound: "Uključi/isključi zvuk" #Settings to enable/disable sound
+  overTheBoard: "Igraj bez mreže, preko uređaja"
+  sharePgn: "Podijeli PGN"
+  shareGameUrl: 'Podijeli URL partije'
+  playOnline: "Igraj na mreži"
+  playOffline: "Igraj izvan mreže"
