--- a/translation/dest/kk-KZ/mobile-misc.yaml
+++ b/translation/dest/kk-KZ/mobile-misc.yaml
@@ -1,1 +1,3 @@
 kk-KZ:
+  apiUnsupported: "Личес нұсқасы тым ескі! Қолдаңбаны тегін жаңартып алыңыз!"
+  apiDeprecated: "Личес қолдаңбасын тегін жаңартып алыңыз! Бұл нұсқаның қолдауын %s тоқтатамыз."
