--- a/translation/dest/nl-NL/mobile-misc.yaml
+++ b/translation/dest/nl-NL/mobile-misc.yaml
@@ -14,7 +14,7 @@ nl-NL:
   landscapeBoardSide: "Positie bord (in landschapsmodus)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
   toggleSound: "Geluid aan/uit" #Settings to enable/disable sound
   overTheBoard: "Op virtueel bord"
-  sharePgn: "Pgn delen"
+  sharePgn: "PGN delen"
   shareGameUrl: 'Partij URL delen'
   playOnline: "Online spelen"
   playOffline: "Offline spelen"
