--- a/translation/dest/be-BY/mobile-misc.yaml
+++ b/translation/dest/be-BY/mobile-misc.yaml
@@ -12,3 +12,9 @@ be-BY:
   positionRight: "Зправа" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Злева" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Бок дошкі на экране (пры альбомным рэжыме)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Укл./адкл. гук" #Settings to enable/disable sound
+  overTheBoard: "За дошкай"
+  sharePgn: "Падзяліцца PGN"
+  shareGameUrl: 'Падзяліцца спасылкай на гульню'
+  playOnline: "Гуляць анлайн"
+  playOffline: "Гуляць афлайн"
