--- a/translation/dest/ca-ES/mobile-misc.yaml
+++ b/translation/dest/ca-ES/mobile-misc.yaml
@@ -12,3 +12,9 @@ ca-ES:
   positionRight: "Dreta" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Esquerra" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Ubicació del tauler (en mode horitzontal)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Activa/Desactiva el so" #Settings to enable/disable sound
+  overTheBoard: "Juga offline, sobre el tauler"
+  sharePgn: "Comparteix PGN"
+  shareGameUrl: 'Comparteix l''enllaç a la partida'
+  playOnline: "Juga online"
+  playOffline: "Juga sense connexió"
