--- a/translation/dest/cs-CZ/mobile-misc.yaml
+++ b/translation/dest/cs-CZ/mobile-misc.yaml
@@ -11,3 +11,7 @@ cs-CZ:
   settingsClockPosition: "Pozice hodin" #Determines whether each player's time is shown on the left or right side of the board
   positionRight: "Vpravo" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Vlevo" #As in "left-hand side"; not political or past participle
+  sharePgn: "Sdílet PGN"
+  shareGameUrl: 'Sdílet URL hry'
+  playOnline: "Hrát online"
+  playOffline: "Hrát offline"
