--- a/translation/dest/eu-ES/mobile-misc.yaml
+++ b/translation/dest/eu-ES/mobile-misc.yaml
@@ -12,3 +12,9 @@ eu-ES:
   positionRight: "Eskuma" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Ezkerra" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Taula pantailaren aldean (modu zabalean)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Aktibatu/desaktibatu soinua" #Settings to enable/disable sound
+  overTheBoard: "Taula gainean"
+  sharePgn: "Partekatu PGNa"
+  shareGameUrl: 'Partekatu partidaren helbidea'
+  playOnline: "Jokatu online"
+  playOffline: "Jokatu offline"
