--- a/translation/dest/lv-LV/mobile-misc.yaml
+++ b/translation/dest/lv-LV/mobile-misc.yaml
@@ -12,3 +12,9 @@ lv-LV:
   positionRight: "Pa labi" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Pa kreisi" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Galdiņa novietojums ekrānā (ainavas režīmā)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Ieslēgt/Izslēgt skaņu" #Settings to enable/disable sound
+  overTheBoard: "Šaha galdiņš"
+  sharePgn: "Dalīties ar PGN"
+  shareGameUrl: 'Dalīties ar spēles URL'
+  playOnline: "Spēlēt tiešsaistē"
+  playOffline: "Spēlēt bezsaistē"
