--- a/translation/dest/uk-UA/mobile-misc.yaml
+++ b/translation/dest/uk-UA/mobile-misc.yaml
@@ -12,3 +12,6 @@ uk-UA:
   positionRight: "Праворуч" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Ліворуч" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Розташування дошки (в альбомній орієнтації)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  shareGameUrl: 'Ділитись посиланням на гру'
+  playOnline: "Грай онлайн"
+  playOffline: "Грай офлайн"
