Make a few more strings translatable

--- a/translation/source/mobile-misc.yaml
+++ b/translation/source/mobile-misc.yaml
@@ -1,6 +1,10 @@
 en-GB:
   apiUnsupported: "Your version of lichess app is too old! Please upgrade for free to the latest version."
   apiDeprecated: "Upgrade for free to the latest lichess app! Support for this version will be dropped on %s."
+  comments: "Comments"
+  gameInformation: "Game information"
+  home: "Home"
+  lastScore: "Last score: %s"
   playerisInvitingYou: "%s is inviting you"
   unsupportedVariant: "Variant %s is not supported in this version"
   notesSynchronizationHasFailed: "Notes synchronization with lichess has failed, please try later."
