New Crowdin updates (#1895)
* New translations: mobile-misc.yaml (German, Switzerland)

* New translations: mobile-misc.yaml (Hebrew)

* New translations: mobile-misc.yaml (Vietnamese)

* New translations: mobile-misc.yaml (Turkish)

* New translations: mobile-misc.yaml (Ukrainian)

* New translations: mobile-misc.yaml (Italian)

* New translations: mobile-misc.yaml (Hindi)

* New translations: mobile-misc.yaml (Odia)

* New translations: mobile-misc.yaml (German)

* New translations: mobile-misc.yaml (German)

* New translations: mobile-misc.yaml (English, United States)

* New translations: mobile-misc.yaml (Azerbaijani)

* New translations: mobile-misc.yaml (German)

* New translations: mobile-misc.yaml (Lithuanian)

* New translations: mobile-misc.yaml (Dutch)

* New translations: mobile-misc.yaml (Polish)

* New translations: mobile-misc.yaml (Portuguese)

* New translations: mobile-misc.yaml (Russian)

* New translations: mobile-misc.yaml (Turkish)

* New translations: mobile-misc.yaml (Ukrainian)

* New translations: mobile-misc.yaml (English, United States)

* New translations: mobile-misc.yaml (Spanish)

* New translations: mobile-misc.yaml (Romanian)

* New translations: mobile-misc.yaml (French)

* New translations: mobile-misc.yaml (Arabic)

* New translations: mobile-misc.yaml (Italian)

* New translations: mobile-misc.yaml (Danish)

* New translations: mobile-misc.yaml (Luxembourgish)

* New translations: mobile-misc.yaml (Norwegian Nynorsk)

* New translations: mobile-misc.yaml (Burmese)

* New translations: mobile-misc.yaml (German, Switzerland)

--- a/translation/dest/az-AZ/mobile-misc.yaml
+++ b/translation/dest/az-AZ/mobile-misc.yaml
@@ -12,3 +12,9 @@ az-AZ:
   positionRight: "Sağ" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Sol" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Lövhə ekran tərəfi (üfüqi rejimdə)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Səsi aç/bağla" #Settings to enable/disable sound
+  overTheBoard: "Taxta üzərində"
+  sharePgn: "PGN Paylaş"
+  shareGameUrl: 'Oyun URL-sini paylaş'
+  playOnline: "Onlayn oyna"
+  playOffline: "Oflayn oyna"
