--- a/translation/dest/de-CH/mobile-misc.yaml
+++ b/translation/dest/de-CH/mobile-misc.yaml
@@ -1,6 +1,10 @@
 de-CH:
   apiUnsupported: "Dini Version vode Lichess-App isch veraltet! Bitte lad dir di chostälosi neu Version abe."
   apiDeprecated: "Upgrade choschtälos uf di neuschte Lichess-App! Underschtützig für dini Version wird %s iigschtellt."
+  comments: "Kommentär"
+  gameInformation: "Schpiel Info"
+  home: "Startsiite"
+  lastScore: "Aktuellä Punktestand: %s"
   playerisInvitingYou: "%s ladet dich i"
   unsupportedVariant: "Variante %s wird in dere Version nöd underschtützt"
   notesSynchronizationHasFailed: "D'Synchronisation vo Anmerkigä mit Lichess isch fählgschlagä, bitte versuechs spöter nomol."
@@ -12,3 +16,9 @@ de-CH:
   positionRight: "Rächts" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Linggs" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Bildschirmsiitä vom Brett (im Quärformat)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Ton ein-/ausschalten" #Settings to enable/disable sound
+  overTheBoard: "Offline gegen Mensch"
+  sharePgn: "PGN teilen"
+  shareGameUrl: 'Link der Partie teilen'
+  playOnline: "Spiele online"
+  playOffline: "Spiele offline"
