--- a/translation/dest/de-DE/mobile-misc.yaml
+++ b/translation/dest/de-DE/mobile-misc.yaml
@@ -1,6 +1,10 @@
 de-DE:
-  apiUnsupported: "Deine Version der Lichess-App ist veraltet! Bitte lade dir die kostenlose neue Version herunter."
+  apiUnsupported: "Deine Version der Lichess-App ist zu alt! Bitte aktualisiere kostenlos auf die neueste Version."
   apiDeprecated: "Aktualisiere kostenlos auf die neueste Lichess-App! Unterstützung für diese Version wird %s eingestellt."
+  comments: "Kommentare"
+  gameInformation: "Partie-Information"
+  home: "Startseite"
+  lastScore: "Aktueller Punktestand: %s"
   playerisInvitingYou: "%s lädt dich ein"
   unsupportedVariant: "Variante %s wird in dieser Version nicht unterstützt"
   notesSynchronizationHasFailed: "Die Synchronisation der Anmerkungen mit Lichess ist fehlgeschlagen, bitte versuche es später erneut."
@@ -15,6 +19,6 @@ de-DE:
   toggleSound: "Ton ein-/ausschalten" #Settings to enable/disable sound
   overTheBoard: "Offline gegen Mensch"
   sharePgn: "PGN teilen"
-  shareGameUrl: 'Link zur Partie teilen'
+  shareGameUrl: 'Link der Partie teilen'
   playOnline: "Spiele online"
   playOffline: "Spiele offline"
