--- a/translation/dest/hi-IN/mobile-misc.yaml
+++ b/translation/dest/hi-IN/mobile-misc.yaml
@@ -1,2 +1,13 @@
 hi-IN:
-  apiUnsupported: "Aapka lichess version bahut purana hai usko muft mein upgrade karo"
+  apiUnsupported: "आपका lichess version बहुत पुराना ह​ै | क्ृप्या उसे मुफ़्त मे Upgrade करे।"
+  apiDeprecated: "Lichess के नुतन सन्सकरण से मुफ़्त मे जुड़े | यह सन्सकरण %s के पश्चात कार्य नही करेगा।"
+  playerisInvitingYou: "%s ने आपको न्योता दिया है।"
+  offline: "ऑफलाइन"
+  settingsClockPosition: "घड़ी के लिए स्थान" #Determines whether each player's time is shown on the left or right side of the board
+  positionRight: "दाएँ" #As in "right-hand side"; not truth, morality, or law
+  positionLeft: "बाएँ" #As in "left-hand side"; not political or past participle
+  toggleSound: "ध्वनि को चालू या बंद करें" #Settings to enable/disable sound
+  sharePgn: "PGN शेयर करें"
+  shareGameUrl: 'खेल के URL को साझा करें'
+  playOnline: "ऑनलाइन खेलें"
+  playOffline: "ऑफ़लाइन खेलें"
