--- a/translation/dest/it-IT/mobile-misc.yaml
+++ b/translation/dest/it-IT/mobile-misc.yaml
@@ -1,6 +1,10 @@
 it-IT:
   apiUnsupported: "La tua versione dell'app lichess è troppo vecchia! Per favore aggiornala gratuitamente all'ultima versione."
   apiDeprecated: "Aggiorna gratuitamente all'ultima app lichess! Il supporto per questa versione terminerà il %s."
+  comments: "Commenti"
+  gameInformation: "Informazioni sulla partita"
+  home: "Home"
+  lastScore: "Ultimo punteggio: %s"
   playerisInvitingYou: "%s ti sta invitando"
   unsupportedVariant: "La variante %s non è supportata in questa versione"
   notesSynchronizationHasFailed: "La sincronizzazione delle note con lichess non è riuscita, riprova più tardi."
@@ -12,3 +16,8 @@ it-IT:
   positionRight: "Destra" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Sinistra" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Lato dello schermo della scacchiera (in modalità orizzontale)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  toggleSound: "Attiva/disattiva audio" #Settings to enable/disable sound
+  sharePgn: "Condividi PGN"
+  shareGameUrl: 'Condividi URL della partita'
+  playOnline: "Gioca online"
+  playOffline: "Gioca offline"
