--- a/translation/dest/lb-LU/mobile-misc.yaml
+++ b/translation/dest/lb-LU/mobile-misc.yaml
@@ -1,6 +1,10 @@
 lb-LU:
   apiUnsupported: "Deng Versioun vun der Lichess App ass ze aal. Maach wannechgelift den gratis Upgrade zu der neister Versioun."
   apiDeprecated: "Gratis op déi neisten Versioun vun der Lichess App upgraden! Support vun dëser Versioun hält den %s op."
+  comments: "Kommentaren"
+  gameInformation: "Spill Informatioun"
+  home: "Home"
+  lastScore: "Leschte Score: %s"
   playerisInvitingYou: "%s invitéiert dech"
   unsupportedVariant: "Variant %s ass an dëser Versioun net ennerstëtzt"
   offline: "Offline"
