--- a/translation/dest/lt-LT/mobile-misc.yaml
+++ b/translation/dest/lt-LT/mobile-misc.yaml
@@ -1,6 +1,10 @@
 lt-LT:
   apiUnsupported: "Jūsų lichess programėlės versija per sena! Prašome nemokamai atsinaujinti savo programėlės versiją."
   apiDeprecated: "Nemokamai atsinaujinkite į vėliausią lichess programės versiją! Šios programėlės versijos palaikymas pasibaigs %s."
+  comments: "Komentarai"
+  gameInformation: "Žaidimo informacija"
+  home: "Namai"
+  lastScore: "Paskutinis rezultatas: %s"
   playerisInvitingYou: "%s kviečia jus"
   unsupportedVariant: "Variantas %s nepalaikomas šioje versijoje"
   notesSynchronizationHasFailed: "Užrašų sinchronizacija su lichess nepavyko, bandykite dar kartą."
