--- a/translation/dest/nn-NO/mobile-misc.yaml
+++ b/translation/dest/nn-NO/mobile-misc.yaml
@@ -1,6 +1,10 @@
 nn-NO:
   apiUnsupported: "Din versjon av lichess-appen er for gammal! Ver venleg å oppgradere til den nyaste, fritt tilgjengelege versjonen."
   apiDeprecated: "Oppgrader gratis til den nyaste lichess-appen! Den versjonen du brukar vert ikkje støtta etter %s."
+  comments: "Kommentarar"
+  gameInformation: "Parti-informasjon"
+  home: "Startside"
+  lastScore: "Gjeldande poengsum: %s"
   playerisInvitingYou: "%s inviterar deg"
   unsupportedVariant: "Variant %s er ikkje støtta i denne versjonen"
   notesSynchronizationHasFailed: "Merknads-synkroniseringa med Lichess feila. Ver venleg å prøva igjen seinare."
