--- a/translation/dest/or-IN/mobile-misc.yaml
+++ b/translation/dest/or-IN/mobile-misc.yaml
@@ -3,7 +3,7 @@ or-IN:
   apiDeprecated: "ନବୀନତ୍ତମ lichess ଆପ୍ ପାଇଁ ମାଗଣାରେ ଅପଗ୍ରେଡ୍ କରନ୍ତୁ! ଏହି ସଂସ୍କରଣ ପାଇଁ ସମର୍ଥନ %s ରେ ସମାପ୍ତ ହେବ।"
   playerisInvitingYou: "%s ଆପଣଙ୍କୁ ନିମନ୍ତ୍ରଣ କରୁଛନ୍ତି"
   unsupportedVariant: "ଏହି ସଂସ୍କରଣରେ %s variant ଟି ସମର୍ଥିତ ନୁହେଁ"
-  vibrateOnGameEvents: "ଖେଳ ଇଭେଣ୍ଟଗୁଡ଼ିକରେ କମ୍ପନ"
+  vibrateOnGameEvents: "ଖେଳ ଇଭେଣ୍ଟଗୁଡ଼ିକରେ କମ୍ପନ"
   offline: "ଅଫଲାଇନ୍‌"
   settingsClockPosition: "ଘଣ୍ଟା ଅବସ୍ଥାନ" #Determines whether each player's time is shown on the left or right side of the board
   positionRight: "ଡାହାଣ" #As in "right-hand side"; not truth, morality, or law
