--- a/translation/dest/ro-RO/mobile-misc.yaml
+++ b/translation/dest/ro-RO/mobile-misc.yaml
@@ -1,6 +1,10 @@
 ro-RO:
   apiUnsupported: "Versiunea aplicației lichess este prea veche! Te rog să o actualizezi gratis la ultima versiune."
   apiDeprecated: "Actualizează gratis la ultima versiune a aplicației lichess! Suportul pentru această versiune va fi oprit pe %s."
+  comments: "Comentarii"
+  gameInformation: "Informații despre joc"
+  home: "Acasă"
+  lastScore: "Ultimul scor: %s"
   playerisInvitingYou: "%s te invită"
   unsupportedVariant: "Varianta %s nu este suportată în această versiune"
   notesSynchronizationHasFailed: "Sincronizarea notelor cu lichess a eșuat, te rog să încerci mai târziu."
