--- a/translation/dest/tr-TR/mobile-misc.yaml
+++ b/translation/dest/tr-TR/mobile-misc.yaml
@@ -1,6 +1,10 @@
 tr-TR:
   apiUnsupported: "Lichess uygulamanızın versiyonu çok eski! Lütfen uygulamayı son sürümüne ücretsiz olarak güncelleyin."
   apiDeprecated: "Ücretsiz şekilde lichess uygulamasını son sürümüne güncelleyin! Mevcut versiyon desteği %s tarihinden itibaren sonlandırılacaktır."
+  comments: "Yorumlar"
+  gameInformation: "Oyun bilgisi"
+  home: "Ana Sayfa"
+  lastScore: "Son puan: %s"
   playerisInvitingYou: "%s sizi davet ediyor"
   unsupportedVariant: "%s varyantı bu versiyonda desteklenmiyor"
   notesSynchronizationHasFailed: "Lichess ile not senkronizasyonu başarısız oldu, lütfen daha sonra deneyin."
@@ -13,6 +17,7 @@ tr-TR:
   positionLeft: "Sol" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Tahta ekran tarafı (yatay modda)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
   toggleSound: "Sesi aç/kapat" #Settings to enable/disable sound
+  overTheBoard: "Ekranı tahta olarak kullan"
   sharePgn: "PGN 'yi paylaş"
   shareGameUrl: 'Oyun bağlantısını paylaş'
   playOnline: "Çevrimiçi oyna"
