New Crowdin updates (#1919)
* New translations: mobile-misc.yaml (French)

* New translations: mobile-misc.yaml (Catalan)

* New translations: mobile-misc.yaml (Greek)

* New translations: mobile-misc.yaml (Finnish)

* New translations: mobile-misc.yaml (Italian)

* New translations: mobile-misc.yaml (Japanese)

* New translations: mobile-misc.yaml (Polish)

* New translations: mobile-misc.yaml (Slovenian)

* New translations: mobile-misc.yaml (Portuguese, Brazilian)

* New translations: mobile-misc.yaml (Kazakh)

* New translations: mobile-misc.yaml (Latvian)

* New translations: mobile-misc.yaml (Chinese Simplified)

* New translations: mobile-misc.yaml (Croatian)

* New translations: mobile-misc.yaml (Norwegian Bokmal)

* New translations: mobile-misc.yaml (Odia)

--- a/translation/dest/ca-ES/mobile-misc.yaml
+++ b/translation/dest/ca-ES/mobile-misc.yaml
@@ -1,6 +1,10 @@
 ca-ES:
   apiUnsupported: "La teva versió de l'aplicació Lichess és massa antiga! Si us plau, actualitza gratuïtament la darrera versió."
   apiDeprecated: "Instal·la de franc la darrera versió de Lichess! Aquesta versió deixarà de tenir suport el %s."
+  comments: "Comentaris"
+  gameInformation: "Informació del joc"
+  home: "Inici"
+  lastScore: "Últim resultat: %s"
   playerisInvitingYou: "Tens una invitació de %s"
   unsupportedVariant: "La variant %s no és compatible amb aquesta versió"
   notesSynchronizationHasFailed: "La sincronització d'anotacions amb Lichess ha fallat. Torna-ho a provar més tard."
