--- a/translation/dest/hr-HR/mobile-misc.yaml
+++ b/translation/dest/hr-HR/mobile-misc.yaml
@@ -1,4 +1,8 @@
 hr-HR:
+  comments: "Komentari"
+  gameInformation: "Informacije o igri"
+  home: "Početna"
+  lastScore: "Tvoj rezultat: %s"
   toggleSound: "Uključi/isključi zvuk" #Settings to enable/disable sound
   overTheBoard: "Igraj bez mreže, preko uređaja"
   sharePgn: "Podijeli PGN"
