--- a/translation/dest/kk-KZ/mobile-misc.yaml
+++ b/translation/dest/kk-KZ/mobile-misc.yaml
@@ -1,3 +1,7 @@
 kk-KZ:
   apiUnsupported: "Личес нұсқасы тым ескі! Қолдаңбаны тегін жаңартып алыңыз!"
   apiDeprecated: "Личес қолдаңбасын тегін жаңартып алыңыз! Бұл нұсқаның қолдауын %s тоқтатамыз."
+  comments: "Пікірлер"
+  gameInformation: "Ойын мәліметтері"
+  home: "Басты бет"
+  lastScore: "Жетістік: %s"
