--- a/translation/dest/fr-FR/mobile-misc.yaml
+++ b/translation/dest/fr-FR/mobile-misc.yaml
@@ -3,7 +3,7 @@ fr-FR:
   apiDeprecated: "Mise à niveau gratuite à la dernière version de l'appli Lichess! Le soutien pour la version courante cessera le %s."
   comments: "Commentaires"
   gameInformation: "Information sur la partie"
-  home: "Page d'accueil"
+  home: "Accueil"
   lastScore: "Dernier résultat : %s"
   playerisInvitingYou: "Vous avez une invitation de %s."
   unsupportedVariant: "La variante %s n'est pas prise en charge par cette version."
