--- a/translation/dest/it-IT/mobile-misc.yaml
+++ b/translation/dest/it-IT/mobile-misc.yaml
@@ -17,6 +17,7 @@ it-IT:
   positionLeft: "Sinistra" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "Lato dello schermo della scacchiera (in modalità orizzontale)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
   toggleSound: "Attiva/disattiva audio" #Settings to enable/disable sound
+  overTheBoard: "Gioca offline"
   sharePgn: "Condividi PGN"
   shareGameUrl: 'Condividi URL della partita'
   playOnline: "Gioca online"
