--- a/translation/dest/lv-LV/mobile-misc.yaml
+++ b/translation/dest/lv-LV/mobile-misc.yaml
@@ -1,6 +1,10 @@
 lv-LV:
   apiUnsupported: "Jūsu Lichess aplikācijas versija ir par vecu. Lūdzu, atjauniniet, lai iegūtu jaunāko versiju par brīvu."
   apiDeprecated: "Atjauniniet uz jaunāko Lichess aplikāciju. Šo versiju vairs neatbalstīs sākot no %s."
+  comments: "Komentāri"
+  gameInformation: "Spēles informācija"
+  home: "Sākums"
+  lastScore: "Iepriekšējais rezultāts: %s"
   playerisInvitingYou: "%s jūs uzaicina"
   unsupportedVariant: "%s variants nav atbalstīts šajā versijā"
   notesSynchronizationHasFailed: "Pierakstu sinhronizācija ar Lichess neizdevās; lūdzu mēģiniet vēlāk."
