--- a/translation/dest/nb-NO/mobile-misc.yaml
+++ b/translation/dest/nb-NO/mobile-misc.yaml
@@ -1,6 +1,10 @@
 nb-NO:
   apiUnsupported: "Din versjon av Lichess-appen er for gammel! Oppgrader gratis til den nyeste versjonen."
   apiDeprecated: "Oppgrader gratis til den nyeste Lichess-appen! Støtten for denne versjonen forsvinner etter %s."
+  comments: "Kommentarer"
+  gameInformation: "Informasjon om partiet"
+  home: "Hjem"
+  lastScore: "Siste poengsum: %s"
   playerisInvitingYou: "%s inviterer deg"
   unsupportedVariant: "Varianten %s støttes ikke i denne versjonen"
   notesSynchronizationHasFailed: "Synkroniseringen av notater med Lichess var mislykket, prøv senere."
