--- a/translation/dest/sl-SI/mobile-misc.yaml
+++ b/translation/dest/sl-SI/mobile-misc.yaml
@@ -1,6 +1,10 @@
 sl-SI:
   apiUnsupported: "Vaša različica lichess aplikacije je prestara! Brezplačno nadgradite na najnovejšo različico."
   apiDeprecated: "Brezplačno nadgradite na najnovejšo aplikacijo lichess! Podpora za to različico bo ukinjena %s."
+  comments: "Komentarji"
+  gameInformation: "Informacije o igri"
+  home: "Domov"
+  lastScore: "Zadnji rezultat: %s"
   playerisInvitingYou: "%s vas vabi"
   unsupportedVariant: "V tej različici različica %s ni podprta"
   notesSynchronizationHasFailed: "Sinhronizacija zapiskov z lichess ni uspela, poskusite pozneje."
