New Crowdin updates (#1924)
* New translations: mobile-misc.yaml (Armenian)

* New translations: mobile-misc.yaml (Hungarian)

* New translations: mobile-misc.yaml (English, United States)

* New translations: mobile-misc.yaml (Welsh)

* New translations: mobile-misc.yaml (English, United States)

* New translations: mobile-misc.yaml (Croatian)

* New translations: mobile-misc.yaml (Belarusian)

* New translations: mobile-misc.yaml (Kazakh)

* New translations: mobile-misc.yaml (Chinese Simplified)

* New translations: mobile-misc.yaml (Indonesian)

* New translations: mobile-misc.yaml (Kazakh)

* New translations: mobile-misc.yaml (Bulgarian)

* New translations: mobile-misc.yaml (Slovak)

* New translations: mobile-misc.yaml (Hindi)

* New translations: mobile-misc.yaml (Hungarian)

* New translations: mobile-misc.yaml (Irish)

* New translations: mobile-misc.yaml (Persian)

* New translations: mobile-misc.yaml (Galician)

* New translations: mobile-misc.yaml (Kannada)

* New translations: mobile-misc.yaml (Bulgarian)

* New translations: mobile-misc.yaml (Marathi)

* New translations: mobile-misc.yaml (Persian)

* New translations: mobile-misc.yaml (Marathi)

* New translations: mobile-misc.yaml (Korean)

* New translations: mobile-misc.yaml (Ukrainian)

* New translations: mobile-misc.yaml (Vietnamese)

* New translations: mobile-misc.yaml (English, United States)

--- a/translation/dest/be-BY/mobile-misc.yaml
+++ b/translation/dest/be-BY/mobile-misc.yaml
@@ -1,6 +1,10 @@
 be-BY:
   apiUnsupported: "Ваша версія lichess састарэла! Калі ласка, абнавіцеся бясплатна да апошняй версіі."
   apiDeprecated: "Бясплатна абнавіцеся да апошняй версіі прылады lichess! Падтрымка гэтай версіі будзе скончана %s."
+  comments: "Каментары"
+  gameInformation: "Інфармацыя пра гульню"
+  home: "Галоўная"
+  lastScore: "Апошні вынік: %s"
   playerisInvitingYou: "%s запрошвае вас"
   unsupportedVariant: "Варыянт %s не падтрымліваецца гэтай версіяй"
   notesSynchronizationHasFailed: "Не атрымалася сінхранізаваць нататкі з lichess. Паспрабуйце пазней."
