--- a/translation/dest/cy-GB/mobile-misc.yaml
+++ b/translation/dest/cy-GB/mobile-misc.yaml
@@ -1,4 +1,8 @@
 cy-GB:
+  comments: "Sylwadau"
+  gameInformation: "Gwybodaeth am y gêm"
+  home: "Cartref"
+  lastScore: "Sgor diweddaraf:%s"
   playerisInvitingYou: "Mae %s yn eich gwahodd chi"
   positionRight: "Dde" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "Chwith" #As in "left-hand side"; not political or past participle
