--- a/translation/dest/en-US/mobile-misc.yaml
+++ b/translation/dest/en-US/mobile-misc.yaml
@@ -1,6 +1,10 @@
 en-US:
   apiUnsupported: "Your version of Lichess app is too old! Please upgrade for free to the latest version."
   apiDeprecated: "Upgrade for free to the latest Lichess app! Support for this version will be dropped on %s."
+  comments: "Comments"
+  gameInformation: "Game information"
+  home: "Home"
+  lastScore: "Last score: %s"
   playerisInvitingYou: "%s is inviting you"
   unsupportedVariant: "Variant %s is not supported in this version"
   notesSynchronizationHasFailed: "Notes synchronization with Lichess has failed, please try later."
