--- a/translation/dest/hy-AM/mobile-misc.yaml
+++ b/translation/dest/hy-AM/mobile-misc.yaml
@@ -1,6 +1,10 @@
 hy-AM:
   apiUnsupported: "Ձեր Lichess հավելվածը հնացել է։ Խնդրում ենք, թարմացրեք այն մինչև վերջին թարմացումը, դա անվճար է։"
   apiDeprecated: "Թարմացրեք ձեր Lichess հավելվածը, դա անվճար է։ Ընթացիկ տարբերակի աջակցումը կդադարեցվի %s-ին։"
+  comments: "Մեկնաբանություններ"
+  gameInformation: "Պարտիայի մասին"
+  home: "Գլխավոր էջ"
+  lastScore: "Վերջին արդյունքը` %s"
   playerisInvitingYou: "%s-ը հրավիրում է Ձեզ"
   unsupportedVariant: "%s տարբերակն այս թարմացումը չի ապահովում"
   notesSynchronizationHasFailed: "Չհաջողվեց գրառումները համաժամանակացնել lichess-ի հետ, կրկնեք քիչ ուշ։"
