--- a/translation/dest/ko-KR/mobile-misc.yaml
+++ b/translation/dest/ko-KR/mobile-misc.yaml
@@ -1,6 +1,8 @@
 ko-KR:
   apiUnsupported: "Lichess 앱 버전이 너무 오래되었습니다! 최신 버전으로 무료로 업그레이드하세요."
   apiDeprecated: "Lichess 앱을 업그레이드하세요! 이 버전에 대한 지원은 %s에 종료됩니다."
+  gameInformation: "게임 정보"
+  home: "홈"
   playerisInvitingYou: "%s가 당신을 초대했습니다"
   unsupportedVariant: "%s는 이 버전에서 지원되지 않습니다."
   notesSynchronizationHasFailed: "Lichess와의 메모 동기화에 실패했습니다. 나중에 다시 시도하세요."
@@ -12,3 +14,7 @@ ko-KR:
   positionRight: "오른쪽" #As in "right-hand side"; not truth, morality, or law
   positionLeft: "왼쪽" #As in "left-hand side"; not political or past participle
   landscapeBoardSide: "보드 스크린 위치(가로 모드에서)" #Side of the screen the board appears on in analysis or online rounds when the device is in landscape mode.
+  sharePgn: "PGN 공유"
+  shareGameUrl: '게임 URL 공유'
+  playOnline: "온라인 플레이"
+  playOffline: "오프라인 플레이"
